# ChangeLog for x11-wm/windowmaker
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Nov 2014; Bernard Cafarelli <voyageur@gentoo.org> windowmaker-9999.ebuild:
  Sync with current stable ebuild

  10 Feb 2012; Bernard Cafarelli <voyageur@gentoo.org> windowmaker-9999.ebuild:
  Fix paths in generated menus and sed lines to evaluate EPREFIX

*windowmaker-9999 (10 Feb 2012)

  10 Feb 2012; Bernard Cafarelli <voyageur@gentoo.org>
  +windowmaker-9999.ebuild, +metadata.xml:
  Rename crm to windowmaker, as this is the official version now

  10 Feb 2012; Bernard Cafarelli <voyageur@gentoo.org>
  windowmaker-crm-9999.ebuild, metadata.xml:
  Update live ebuild from main tree 0.95.1

  21 Apr 2011; Bernard Cafarelli <voyageur@gentoo.org>
  windowmaker-crm-9999.ebuild:
  Use FHS layout for WPrefs, to keep in sync with the new default gnustep
  layout

*windowmaker-crm-9999 (01 Apr 2011)

  01 Apr 2011; Bernard Cafarelli <voyageur@gentoo.org>
  +windowmaker-crm-9999.ebuild, +files/wmaker.desktop, +metadata.xml:
  First version, based on cleaned windowmaker ebuild
