@@ -1,5 +1,27 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX wmaker.desktop 221 SHA256 40359d3c61117f0dbc5eb547e4c369982427e8bc3174c95002d34eb30f9a4a84 SHA512 1c1b24001e47a2af8f18a5f90675d095ba7f929ad9273ca82f61fd13ad35ff22dc9b777eec24fc3fd984790a5d494949d1dd5e0ca39780920017ea7971a3289d WHIRLPOOL 68ea31480ba1796e4243184deff38270963841c2bdb54bc85a606ecad0cdccc6815b11fa67158cbcc527ae3a17488b97a209283289922323ed42ea37a062ac2b
 DIST WindowMaker-extra-0.1.tar.gz 238018 SHA256 acd6e1fb790485b107daf2b710da372367b41383c55d9c8bdfdac521d850edc4 SHA512 0fe9b3ffc093942db167d8a01e15c0f6741f3a40959d1434ea4f23e7b9d4a9c13935a61eabef9691e5fdfd4e407564caafce15c2d65d66499960a6764a874ab8 WHIRLPOOL f2c61b318f64a2debb727ae79dfa1bb8101888bc9492633a96ace0e704c731c383e92882c871622987d5971b919359c066638fba05c5dade330fe3bee21bb034
-EBUILD windowmaker-9999.ebuild 2813 SHA256 97fc7975bb186b4c8f1724160c99e1aa8e1d65b863be54bb587685e3968979fa SHA512 8853b7c03a037b1c904b3a65929763ea73bd375c57abf5673319b7513ea648831436b6ad3af4450f6bf8bed24ea030a40b5c0fdef4ad2790743202ba2aa94c71 WHIRLPOOL 3ad565bca0156bd245bbb6164e5333558fee049dbb44ec2248fa9a78f39fa59d7490209dcd5dfee4935e3dcc4169a278459c226f560fda8c9631d38af8f973f4
-MISC ChangeLog 1107 SHA256 9029f8955e2a4d446864f54c40c179b3b23c02b8db54e285624bda7ab299b310 SHA512 8d0a2828b4dda556ced4f2748dbbf9e5ed206c099ecbbaa9bdac9c5f0e17a8b938d6495ab9fbd7c0f34894246a3eb012d4cfae2f16b471cc9d9ae14cbe1e26dd WHIRLPOOL fcd0be2c201cc4406852de95e993432d1949479e8c22c6615889feb5d7348c786b46b9926784b868b44296bb8d83fa0d1c0310ef76fc6c66228ed3d537b90169
+EBUILD windowmaker-9999.ebuild 2814 SHA256 743721054f418cb18b325944f072fa79ead7831e2eb5732e55fc5d679269662c SHA512 7564d4929d1ce416b62c258ae8ec64e6c22c76a15d43f2fd9f2602c3db43005dcdf2b73c9c5174f9beb9db3b1c43c137fd377beef35be9132bddd3626fee9e4f WHIRLPOOL 0b4ed8f4f3ada3eba976c63adf3a98b7a5a31d6ab54a1fdf040086ef379578d50187155e8f1b16d10e8b1f818dc1401ee41eb6649667f616e94476a695cc7fc7
+MISC ChangeLog 1271 SHA256 ae2db52aef58d2510d639840bf3e513cf3d74acb035c5aedda2580d3b54361e5 SHA512 8f558b459fb522024d904da2deaa976756b1799bbdf25ff3cb489ab86433afebe7afb53dd64e22ddd1aacfce1434ca3a1c7270636cf0549cf39ff271d4b2e4eb WHIRLPOOL e27a0c54af628c9f13cb82368a05f550fa53a15f2b3c135ec8c6134d22e4be8452dc64c424060aa093bf9033472e00e162204037f70514816d2d8896c7be0054
 MISC metadata.xml 491 SHA256 adf20a574ac6c90560edc4581473bd340fe1002ac26d642199878d1fe39f9b70 SHA512 172a00ac05dcb64e3aa08c553f8e22d475f88541263fe139db3e486a96efa079aab82e8832f53d7d83039a12187b9094585c1e944f6a9af7bf82a1c8044d1e40 WHIRLPOOL 656c4648b292d58f8590d4a5c456ced8b52cf389253a42c2240add03a336e23a571f792275968dd20a131aaab0a30ed918a5849157dc5a9611204ebc4216af73
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.1
+
+iQJ8BAEBCABmBQJVZctOXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXREMzFDRDFGNEQwRTAyNjc2QzRDNjRFQzAw
+MEY3QUIzMzFCMEYwOTdGAAoJEAD3qzMbDwl/9PgQAMJDiXHFaVsyyQJlvxv5oTnT
+zhKHLvqB9bUqpQmjkziemh4wbevgZGrew2dJ7pGnv3UyYVDynXIVq+Q0zD3u15Dk
+edDqrRV0NKTbyv60vT4Cpcgc22Ysy9u7HjEdd6L+dz+9hBVrW6qUKyPFh/Be+o14
+WB3PctDUB9O8rlv9kJby+jpzA6cyWjicDsYHt5Qe0AfNxckuU2ctJfo/Pjz1GHT+
+6/Zv6QXTFsnY3o5iPXcy4Jq2ETKzZjQRWK4pS1xj8DWPeLLW9c9gjS3Ui9YcS+VZ
+7dtj7iiPNfvXcyjOJQSq6OboklDv95ltC91kUizkmr+FsvZtac2Edwr0GaWFqMsX
+V2U1rTa3RLtPoWgHrF+msPjdvztzVKejp+6L0nUSzoDeCNnyCVnbIbu6+dEULs6b
+YYWTPVvzSsW2Rdvi5uTxFZ5taEDinzm5RdOK74gNwL5SvBYUx9EZ7XUATlGJMwx7
+lGFBlzoy6kHrbRyYGc7EOqxyc9R4kRG47xqnLlVgPRVyMUNK93Vh9NUI8ON+/NcQ
++H5gyYGWs0UBdibAcM1TFOayZ88aLxaxLAeMKp2sLYIlPRP+Fukaq5v2HEwt3fog
+9I9z2yJj0DLFcenG5tcL/eqbhvbJ8cJFUkMszHfBtnbShr3F4q5q4Jy1jmknd4mt
+iYG9fFN2VUlO01/LyOUn
+=nYmn
+-----END PGP SIGNATURE-----
